working on deleting edge
